grammar/.antlr/UVLParser.java
// Generated from /Users/jagalindo/Documents/uvl-parser-java/grammar/UVL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UVLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, INDENT=24, 
		DEDENT=25, ORGROUP=26, ALTERNATIVE=27, OPTIONAL=28, MANDATORY=29, CARDINALITY=30, 
		NOT=31, AND=32, OR=33, EQUIVALENCE=34, IMPLICATION=35, EQUAL=36, LOWER=37, 
		LOWER_EQUALS=38, GREATER=39, GREATER_EQUALS=40, NOT_EQUALS=41, DIV=42, 
		MUL=43, ADD=44, SUB=45, FLOAT=46, INTEGER=47, BOOLEAN=48, BOOLEAN_KEY=49, 
		COMMA=50, OPEN_PAREN=51, CLOSE_PAREN=52, OPEN_BRACK=53, CLOSE_BRACK=54, 
		OPEN_BRACE=55, CLOSE_BRACE=56, OPEN_COMMENT=57, CLOSE_COMMENT=58, ID_NOT_STRICT=59, 
		ID_STRICT=60, STRING=61, SKIP_=62, NEWLINE=63;
	public static final int
		RULE_featureModel = 0, RULE_includes = 1, RULE_includeLine = 2, RULE_namespace = 3, 
		RULE_imports = 4, RULE_importLine = 5, RULE_features = 6, RULE_group = 7, 
		RULE_groupSpec = 8, RULE_feature = 9, RULE_featureCardinality = 10, RULE_attributes = 11, 
		RULE_attribute = 12, RULE_valueAttribute = 13, RULE_key = 14, RULE_value = 15, 
		RULE_vector = 16, RULE_constraintAttribute = 17, RULE_constraintList = 18, 
		RULE_constraints = 19, RULE_constraintLine = 20, RULE_constraint = 21, 
		RULE_equation = 22, RULE_expression = 23, RULE_aggregateFunction = 24, 
		RULE_stringAggregateFunction = 25, RULE_numericAggregateFunction = 26, 
		RULE_reference = 27, RULE_id = 28, RULE_featureType = 29, RULE_languageLevel = 30, 
		RULE_majorLevel = 31, RULE_minorLevel = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"featureModel", "includes", "includeLine", "namespace", "imports", "importLine", 
			"features", "group", "groupSpec", "feature", "featureCardinality", "attributes", 
			"attribute", "valueAttribute", "key", "value", "vector", "constraintAttribute", 
			"constraintList", "constraints", "constraintLine", "constraint", "equation", 
			"expression", "aggregateFunction", "stringAggregateFunction", "numericAggregateFunction", 
			"reference", "id", "featureType", "languageLevel", "majorLevel", "minorLevel"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'include'", "'namespace'", "'imports'", "'as'", "'features'", 
			"'cardinality'", "'constraint'", "'constraints'", "'sum'", "'avg'", "'len'", 
			"'floor'", "'ceil'", "'.'", "'String'", "'Integer'", "'Real'", "'Arithmetic'", 
			"'Type'", "'group-cardinality'", "'feature-cardinality'", "'aggregate-function'", 
			"'string-constraints'", "'<INDENT>'", "'<DEDENT>'", "'or'", "'alternative'", 
			"'optional'", "'mandatory'", null, "'!'", "'&'", "'|'", "'<=>'", "'=>'", 
			"'=='", "'<'", "'<='", "'>'", "'>='", "'!='", "'/'", "'*'", "'+'", "'-'", 
			null, null, null, "'Boolean'", "','", "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "'/*'", "'*/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"INDENT", "DEDENT", "ORGROUP", "ALTERNATIVE", "OPTIONAL", "MANDATORY", 
			"CARDINALITY", "NOT", "AND", "OR", "EQUIVALENCE", "IMPLICATION", "EQUAL", 
			"LOWER", "LOWER_EQUALS", "GREATER", "GREATER_EQUALS", "NOT_EQUALS", "DIV", 
			"MUL", "ADD", "SUB", "FLOAT", "INTEGER", "BOOLEAN", "BOOLEAN_KEY", "COMMA", 
			"OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", 
			"CLOSE_BRACE", "OPEN_COMMENT", "CLOSE_COMMENT", "ID_NOT_STRICT", "ID_STRICT", 
			"STRING", "SKIP_", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UVL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UVLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureModelContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(UVLParser.EOF, 0); }
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(UVLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UVLParser.NEWLINE, i);
		}
		public IncludesContext includes() {
			return getRuleContext(IncludesContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public ConstraintsContext constraints() {
			return getRuleContext(ConstraintsContext.class,0);
		}
		public FeatureModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_featureModel; }
	}

	public final FeatureModelContext featureModel() throws RecognitionException {
		FeatureModelContext _localctx = new FeatureModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_featureModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(66);
				namespace();
				}
			}

			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(69);
				match(NEWLINE);
				}
				break;
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(72);
				includes();
				}
			}

			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(75);
				match(NEWLINE);
				}
				break;
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(78);
				imports();
				}
			}

			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(81);
				match(NEWLINE);
				}
				break;
			}
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(84);
				features();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(87);
				match(NEWLINE);
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(90);
				constraints();
				}
			}

			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludesContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(UVLParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(UVLParser.DEDENT, 0); }
		public List<IncludeLineContext> includeLine() {
			return getRuleContexts(IncludeLineContext.class);
		}
		public IncludeLineContext includeLine(int i) {
			return getRuleContext(IncludeLineContext.class,i);
		}
		public IncludesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includes; }
	}

	public final IncludesContext includes() throws RecognitionException {
		IncludesContext _localctx = new IncludesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_includes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__0);
			setState(96);
			match(NEWLINE);
			setState(97);
			match(INDENT);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 562949954207744L) != 0)) {
				{
				{
				setState(98);
				includeLine();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludeLineContext extends ParserRuleContext {
		public LanguageLevelContext languageLevel() {
			return getRuleContext(LanguageLevelContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public IncludeLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeLine; }
	}

	public final IncludeLineContext includeLine() throws RecognitionException {
		IncludeLineContext _localctx = new IncludeLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_includeLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			languageLevel();
			setState(107);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceContext extends ParserRuleContext {
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__1);
			setState(110);
			reference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(UVLParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(UVLParser.DEDENT, 0); }
		public List<ImportLineContext> importLine() {
			return getRuleContexts(ImportLineContext.class);
		}
		public ImportLineContext importLine(int i) {
			return getRuleContext(ImportLineContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__2);
			setState(113);
			match(NEWLINE);
			setState(114);
			match(INDENT);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID_NOT_STRICT || _la==ID_STRICT) {
				{
				{
				setState(115);
				importLine();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportLineContext extends ParserRuleContext {
		public ReferenceContext ns;
		public ReferenceContext alias;
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}
		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class,i);
		}
		public ImportLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importLine; }
	}

	public final ImportLineContext importLine() throws RecognitionException {
		ImportLineContext _localctx = new ImportLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((ImportLineContext)_localctx).ns = reference();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(124);
				match(T__3);
				setState(125);
				((ImportLineContext)_localctx).alias = reference();
				}
			}

			setState(128);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeaturesContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(UVLParser.INDENT, 0); }
		public FeatureContext feature() {
			return getRuleContext(FeatureContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(UVLParser.DEDENT, 0); }
		public FeaturesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_features; }
	}

	public final FeaturesContext features() throws RecognitionException {
		FeaturesContext _localctx = new FeaturesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_features);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__4);
			setState(131);
			match(NEWLINE);
			setState(132);
			match(INDENT);
			setState(133);
			feature();
			setState(134);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupContext extends ParserRuleContext {
		public GroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group; }
	 
		public GroupContext() { }
		public void copyFrom(GroupContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AlternativeGroupContext extends GroupContext {
		public TerminalNode ALTERNATIVE() { return getToken(UVLParser.ALTERNATIVE, 0); }
		public GroupSpecContext groupSpec() {
			return getRuleContext(GroupSpecContext.class,0);
		}
		public AlternativeGroupContext(GroupContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OptionalGroupContext extends GroupContext {
		public TerminalNode OPTIONAL() { return getToken(UVLParser.OPTIONAL, 0); }
		public GroupSpecContext groupSpec() {
			return getRuleContext(GroupSpecContext.class,0);
		}
		public OptionalGroupContext(GroupContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MandatoryGroupContext extends GroupContext {
		public TerminalNode MANDATORY() { return getToken(UVLParser.MANDATORY, 0); }
		public GroupSpecContext groupSpec() {
			return getRuleContext(GroupSpecContext.class,0);
		}
		public MandatoryGroupContext(GroupContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CardinalityGroupContext extends GroupContext {
		public TerminalNode CARDINALITY() { return getToken(UVLParser.CARDINALITY, 0); }
		public GroupSpecContext groupSpec() {
			return getRuleContext(GroupSpecContext.class,0);
		}
		public CardinalityGroupContext(GroupContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrGroupContext extends GroupContext {
		public TerminalNode ORGROUP() { return getToken(UVLParser.ORGROUP, 0); }
		public GroupSpecContext groupSpec() {
			return getRuleContext(GroupSpecContext.class,0);
		}
		public OrGroupContext(GroupContext ctx) { copyFrom(ctx); }
	}

	public final GroupContext group() throws RecognitionException {
		GroupContext _localctx = new GroupContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_group);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ORGROUP:
				_localctx = new OrGroupContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(ORGROUP);
				setState(137);
				groupSpec();
				}
				break;
			case ALTERNATIVE:
				_localctx = new AlternativeGroupContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(ALTERNATIVE);
				setState(139);
				groupSpec();
				}
				break;
			case OPTIONAL:
				_localctx = new OptionalGroupContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				match(OPTIONAL);
				setState(141);
				groupSpec();
				}
				break;
			case MANDATORY:
				_localctx = new MandatoryGroupContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(142);
				match(MANDATORY);
				setState(143);
				groupSpec();
				}
				break;
			case CARDINALITY:
				_localctx = new CardinalityGroupContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(144);
				match(CARDINALITY);
				setState(145);
				groupSpec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupSpecContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(UVLParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(UVLParser.DEDENT, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public GroupSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupSpec; }
	}

	public final GroupSpecContext groupSpec() throws RecognitionException {
		GroupSpecContext _localctx = new GroupSpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_groupSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(NEWLINE);
			setState(149);
			match(INDENT);
			setState(151); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(150);
				feature();
				}
				}
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1729945206863921152L) != 0) );
			setState(155);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureContext extends ParserRuleContext {
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(UVLParser.NEWLINE, 0); }
		public FeatureTypeContext featureType() {
			return getRuleContext(FeatureTypeContext.class,0);
		}
		public FeatureCardinalityContext featureCardinality() {
			return getRuleContext(FeatureCardinalityContext.class,0);
		}
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public TerminalNode INDENT() { return getToken(UVLParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(UVLParser.DEDENT, 0); }
		public List<GroupContext> group() {
			return getRuleContexts(GroupContext.class);
		}
		public GroupContext group(int i) {
			return getRuleContext(GroupContext.class,i);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_feature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 562949953650688L) != 0)) {
				{
				setState(157);
				featureType();
				}
			}

			setState(160);
			reference();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(161);
				featureCardinality();
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_BRACE) {
				{
				setState(164);
				attributes();
				}
			}

			setState(167);
			match(NEWLINE);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INDENT) {
				{
				setState(168);
				match(INDENT);
				setState(170); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(169);
					group();
					}
					}
					setState(172); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2080374784L) != 0) );
				setState(174);
				match(DEDENT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FeatureCardinalityContext extends ParserRuleContext {
		public TerminalNode CARDINALITY() { return getToken(UVLParser.CARDINALITY, 0); }
		public FeatureCardinalityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_featureCardinality; }
	}

	public final FeatureCardinalityContext featureCardinality() throws RecognitionException {
		FeatureCardinalityContext _localctx = new FeatureCardinalityContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_featureCardinality);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__5);
			setState(179);
			match(CARDINALITY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttributesContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACE() { return getToken(UVLParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(UVLParser.CLOSE_BRACE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UVLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UVLParser.COMMA, i);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
	}
